--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -80,8 +80,9 @@ td {
 
 
 .flash-success {
-  background-color: rgb(60, 255, 0);
+  background-color: rgb(70, 233, 21);
   font-weight: bold;
+  color: black;
   margin-top: 10px;
   padding: 3px;
   width: fit-content;
@@ -90,6 +91,7 @@ td {
 .flash-error {
   background-color: rgb(250, 7, 7);
   font-weight: bold;
+  columns: black;
   margin-top: 10px;
   padding: 3px;
   width: fit-content;
