--- a/views/playerHome.ejs
+++ b/views/playerHome.ejs
@@ -8,6 +8,13 @@
     <link href="/css/styles.css" rel="stylesheet" />
     <title>Decipher</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        li ol ul {
+            display: list-item;
+            list-style-position: inside;
+            list-style-type:none
+            }
+    </style>
 </head>
 <body class="playerhome">
     <%- include('userheader.ejs') %>
@@ -28,9 +35,24 @@
             </div>
             <div class="py-3 centerElement"> 
                 <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2">Start</button>        
-            </div>  
-            </form>
+            </div>
+          </form>
+        </div>
+        <div class="col-start-2 col-span-4 px-20">
+            <h3 class="text-2xl centerElement">Instructions</h3>
+            <ul class="list-disc">
+                <li>Initially each team comprising of 2 players will be given a username and a password where they have to login</li>
+                <li>Once the team logs in, they will be asked to enter the quiz key which will be shared by the coordinators/volunteers.</li>
+                <li class="font-bold">The timer begins immediately after entering the quiz key and clicking on start</li>
+                <li>During the task, if the players finds the activity difficult they can use hints</li>
+                <li>For each task we will provide 2 hints, which can be used by the players based on their requirement.</li> 
+                <li class="font-bold">Note: When a player use a hint, the maximum points that can be obtained by that question gets reduced (The question loses its worth for every hint used)</li>
+                <li>For every question, click on the Submit button to check your answer</li>
+                <li>Each question can be submitted any number of times</li>
+                <li>You will be ranked based on score. Completion time will be considered to break ties</li>
+                <li>When the task starts, discussions regarding the methodology will not be entertained.</li>
+            </ul>
         </div>
     </div>
-</body>
+</body> 
 </html>
